[package]
name = "mix_server"
version = "0.0.0"
authors = ["David Stainton <dstainton415@gmail.com>"]
description = "mix network server library"
keywords = ["cryptography", "network", "mixnet", "anonymity"]
license = "AGPL-3.0-only"

[dependencies]
epoch = "0.0.2"
ecdh_wrapper = "0.0.9"
sphinxcrypto = "0.0.19"
sphinx_replay_cache = "0.0.3"
mix_link = "0.0.5"
clap = "2.32.0"
toml = "0.4"
serde_derive = "1.0.80"
serde = "1.0.80"
log = "0.4.3"
log4rs = "0.8.0"
crossbeam = "0.5.0"
crossbeam-channel = "0.3.0"
crossbeam-utils = "0.6.1"
crossbeam-thread = "0.0.0"
rand = "^0.4.2"
byteorder = "1.2.6"

[dev-dependencies]
rustc-serialize = "0.3.24"
rand = "^0.4.2"
tempfile = "3.0.4"

[[bin]]
name = "server"
doc = false